# Conversational-BI-System

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/database/: connection.py  registry.py  schema_service.py
src/exception/: exception.py
src/logging/: logger.py
src/tests/: test_connection.py  test_registry.py  test_schema_service.py
